# kafka-topic-analyzer

./: .editorconfig  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  appveyor.yml
ci/: Dockerfile  before_deploy.sh  script.sh
src/: fnv32.rs  in_mem_cdc.rs  kafka.rs  main.rs  metric.rs
